--- a/theme/css/index.css
+++ b/theme/css/index.css
@@ -242,12 +242,12 @@ iframe {
 	text-align: center;
 }
 
-.tn {
-	width: 700px;
-	height: 700px;
+.tnn {
+	width: 300px;
+	height: 300px;
 	margin-left: 11px;
 	flex-grow: 1;
-	max-width: 700px;
+	max-width: 500px;
 	margin-top: 11px;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -259,28 +259,20 @@ iframe {
 	background-blend-mode: multiply;
 	transition: all 0.1s ease-in;
 	border-radius: 9px;
-	font-size: 50px;
+	font-size: 20px;
 	line-height: 56px;	
 	color: #FFFFF0;
 }
 
 
-.tn:hover {
+.tnn:hover {
 	background-color: rgba(0,0,0,0.55);
 }
 
-.tn p {
+.tnn p {
 	margin: 1em;
-	font-size:  40px;
-	text-align: justify;
-}
-
-.tn b {
-	color: #7FC7FF;
-}
-
-.tn b.two {
-	color: #7FC7FF;
+	font-size:  35px;
+	text-align: center;
 }
 
 .Back {
@@ -480,6 +472,19 @@ margin-top: 150px;
 	.sob img {
 		width: 500px;
 	}
+	.tnn p {
+		font-size: 30px;
+	}
+}
+@media only screen and (max-width: 612px) {
+	.tnn p {
+		font-size: 15px;
+	}
+}
+@media only screen and (max-width: 607px) {
+	.tnn p {
+		font-size: 10px;
+	}
 }
 @media only screen and (max-width: 698px) {
 	.header .title p {
@@ -492,6 +497,9 @@ margin-top: 150px;
 	.sob img {
 		width: 400px;
 	}
+	.tnn p {
+		font-size: 25px;
+	}
 }
 @media only screen and (max-width: 573px) {
 	.header .title p {
@@ -500,7 +508,10 @@ margin-top: 150px;
 	.emblem_mini img {
 		height: 120px;
 	}
-	
+	.tnn {
+		margin-top: 80px;
+		font-size: 20px;
+	}
 	.container {
 		padding: 0;
 	}
@@ -539,6 +550,9 @@ margin-top: 150px;
 	}
 	.sob img {
 		width: 300px;
+	}
+	.tnn p {
+		font-size: 15px;
 	}
 }
 @media only screen and (max-width: 383px) {
