--- a/theme/css/index.css
+++ b/theme/css/index.css
@@ -340,6 +340,7 @@ video {
 
 .emblem_mini {
 	margin-left: 11px;
+	display: block;
 
 }
 .emblem_mini img {
@@ -397,13 +398,18 @@ video {
 }
 
 .Back {
-	font-size: 45px;
+	font-size: 40px;
 	margin-left: 11px;
 	cursor: pointer;
+	margin-top: 30px;
 }
 .Back:hover {
 	background-color: rgba(0,0,0,0.40);
 	transition: all 0.25s ease-in;
+}
+
+.Form {
+	margin-top: 40px;
 }
 
 .albob {
@@ -475,10 +481,16 @@ margin-top: 150px;
 	.tnn p {
 		font-size: 30px;
 	}
+	.Form iframe {
+		width: 500px;
+	}
 }
 @media only screen and (max-width: 612px) {
 	.tnn p {
 		font-size: 15px;
+	}
+	.Form iframe {
+		width: 400px;
 	}
 }
 @media only screen and (max-width: 607px) {
@@ -540,6 +552,10 @@ margin-top: 150px;
 	.title1 b {
 		font-size: 30px;
 	}
+	.Back {
+		margin-top: 80px;
+		display: block;
+	}
 }
 @media only screen and (max-width: 425px) {
 	.contein2 b {
@@ -553,6 +569,9 @@ margin-top: 150px;
 	}
 	.tnn p {
 		font-size: 15px;
+	}
+	.Form iframe {
+		width: 300px;
 	}
 }
 @media only screen and (max-width: 383px) {
@@ -579,5 +598,8 @@ margin-top: 150px;
 	}
 	.sob img {
 		width: 200px;
+	}
+	.Form iframe {
+		width: 250px;
 	}
 }
