--- a/theme/css/index.css
+++ b/theme/css/index.css
@@ -188,6 +188,10 @@ iframe {
 	margin-top: 38px;
 }
 
+.politica a {
+	color: #7FC7FF
+}
+
 .title1 {
 	margin: 96px 0px 74px 0px;
 	font-size: 38px;
