--- a/theme/css/index.css
+++ b/theme/css/index.css
@@ -79,10 +79,38 @@ font-family: 'Moscow Sans', arial;
 .description > p:last-child {
    margin: 0;
 }
+.description1 {
+	background-color: #bbb1;
+	padding: 1em;
+	border-radius: 88px;
+	margin-top: 38px;
+	margin-bottom: 50px;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+.description1 p {
+	text-align: 10px;
+	font-size: 1.1vw;
+}
+
+.description1 > p {
+  margin: 0 0 0.5em 0;
+  font-weight: bold;
+}
+
+.description1 > p:last-child {
+   margin: 0;
+}
 
 .vid {
 	text-align: center;
 	margin-top: 120px;
+}
+.vid img {
+	display: flex;
+	text-align: left;
+	max-width: 500px;
+	margin-left: 20px;
 }
 .vid1 p {
 	color: #f02;
@@ -92,28 +120,19 @@ font-family: 'Moscow Sans', arial;
 	text-align: center;
 	margin-top: 120px;
 }
+.vid1 img {
+	display: flex;
+	text-align: left;
+	max-width: 500px;
+	margin-left: 20px;
+}
+
 .alb {
 	margin-top: 30px;
 	margin-left: 10px;
 	background: #f02;
 	text-align: center;
 	border-radius: 90px;
-}
-img.background {
-  min-height: 100%;
-  min-width: 640px;
-  width: 100%;
-  height: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-  /* Зависит от размера изображения */
-  @media screen and (max-width: 640px){
-	img.bg {
-	  left: 50%;
-	  margin-left: -320px;
-	}
-  }
 }
 
 .ob p {
@@ -640,6 +659,12 @@ margin-top: 150px;
 	.title2 p {
 		font-size: 20px;
 	}
+	.vid img {
+	max-width: 300px;
+	}
+	.vid1 img {
+	max-width: 300px;
+	}
 }
 @media only screen and (max-width: 612px) {
 	.tnn p {
@@ -689,6 +714,7 @@ margin-top: 150px;
 	.description {
 /*		border-radius: 0;*/
 		margin: 38px 0px 50px 0px;
+
 	}
 	.content {
 		margin-top: 40px;
@@ -746,6 +772,12 @@ margin-top: 150px;
 	}
 	.title2 p {
 		font-size: 10px;
+	}
+	.vid img {
+	max-width: 200px;
+	}
+	.vid1 img {
+	max-width: 200px;
 	}
 }
 @media only screen and (max-width: 383px) {
