--- a/theme/css/index.css
+++ b/theme/css/index.css
@@ -6,6 +6,7 @@ html {
 	font-size: 25px;
 	color: #e4f1f8;
 	letter-spacing: 0.035em;
+	font-family: 'MS SANS SERIF', sans-serif;
 }
 a {
 	text-decoration: none;
@@ -249,7 +250,7 @@ form .Footer {
 	display: flex;
 }
 .logoo img {
-	height: 60px;
+	height: 70px;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-left: 10px;
@@ -259,6 +260,7 @@ form .Footer {
 	margin-left: 10px;
 	font-size: 20px;
 	text-align: center;
+	margin-top: 30px;
 }
 
 .button:hover {
