--- a/theme/css/index.css
+++ b/theme/css/index.css
@@ -104,6 +104,30 @@ font-family: 'Moscow Sans', arial;
    margin: 0;
 }
 
+.description2 {
+	background-color: rgba(122,122,122, 0.8);
+	opacity: 0.8;
+	padding: 1em;
+	border-radius: 88px;
+	margin-top: 38px;
+	margin-bottom: 50px;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+.description2 p {
+	text-align: 10px;
+	font-size: 1.2vw;
+}
+
+.description2 > p {
+  margin: 0 0 0.5em 0;
+  font-weight: bold;
+}
+
+.description2 > p:last-child {
+   margin: 0;
+}
+
 .vid {
 	text-align: center;
 	margin-top: 120px;
@@ -693,7 +717,7 @@ margin-top: 150px;
 
 
 
-.cookie_notice {
+/*.cookie_notice {
     display: none;
     position: fixed;
     z-index: 9999999;
@@ -743,7 +767,7 @@ margin-top: 150px;
 .cookie_btn:hover:before {
     width: 100%;
     left: 0;
-}
+}*/
 
 
 
