--- a/theme/css/index.css
+++ b/theme/css/index.css
@@ -411,28 +411,6 @@ form .Footer {
 	flex-grow: 1;
 	justify-content: center;
 }
-.tnn {
-	cursor: pointer;
-	width: 700px;
-	height: 700px;
-	margin-left: 11px;
-	flex-grow: 1;
-	max-width: 700px;
-	margin-top: 11px;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	display: flex;
-	justify-content: center;
-	align-items: revert;
-	background-color: rgba(0,0,0,0.90);
-	background-blend-mode: multiply;
-	transition: all 0.1s ease-in;
-	border-radius: 9px;
-	font-size: 50px;
-	line-height: 56px;	
-	color: #FFFFF0;
-}
 .tnn:hover {
 	background-color: rgba(0,0,0,0.55);
 }
@@ -441,7 +419,6 @@ form .Footer {
 	font-size:  40px;
 	text-align: center;
 }
-
 .tnn {
 	width: 300px;
 	height: 300px;
@@ -463,17 +440,62 @@ form .Footer {
 	line-height: 56px;	
 	color: #FFFFF0;
 }
-
-
-.tnn:hover {
-	background-color: rgba(0,0,0,0.55);
-}
-
 .tnn p {
 	margin: 1em;
 	font-size:  35px;
 	text-align: center;
 }
+
+
+
+
+
+
+
+
+.trenn1 {
+	margin-top: 1em;
+	display: flex;
+	flex-wrap: wrap;
+	flex-grow: 1;
+	justify-content: center;
+}
+.tnn1 {
+	width: 300px;
+	height: 300px;
+	margin-left: 11px;
+	flex-grow: 1;
+	max-width: 400px;
+	margin-top: 11px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	display: flex;
+	justify-content: center;
+	align-items: revert;
+	background-color: rgba(0,0,0,0.15);
+	background-blend-mode: multiply;
+	transition: all 0.1s ease-in;
+	border-radius: 9px;
+	font-size: 15px;
+	line-height: 36px;	
+	color: #FFFFF0;
+}
+.tnn1:hover {
+	background-color: rgba(222, 29, 51,0.75);
+}
+.tnn1 p {
+	margin: 11.5em;
+	font-size: 25px;
+	text-align: center;
+}
+
+
+
+
+
+
+
 
 .photo {
 	text-align: center;
