--- a/theme/css/index.css
+++ b/theme/css/index.css
@@ -582,6 +582,8 @@ form .Footer {
  }
 }
 
+.watch-on-rutube-link-module__button___rR_M3[hidden] {
+}
 
 
 
@@ -1444,10 +1446,16 @@ margin-top: 150px;
 
 /* Адаптивность для мобильных */
 @media (max-width: 480px) {
- .back-button {
- left: 10px;
- top: 10px;
- padding: 10px 16px;
- }
+	.back-button {
+		left: 10px;
+		top: 10px;
+		padding: 10px 16px;
+	}
+	.modal-description {
+  	font-size: 12px;
+	}
+	.modal-title {
+		font-size: 20px;
+	}
 }
 /*Кнопка конец*/
